[project]
name = "jef"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
  "isaacsim[all,extscache]==4.5.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true